--- a/LogKyrcach/Views/Rooms/Details.cshtml
+++ b/LogKyrcach/Views/Rooms/Details.cshtml
@@ -4,24 +4,26 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Подробнее</h1>
 
 <div>
-    <h4>Room</h4>
+    <h4>Кабинет</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.RoomNumber)
         </dt>
+
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.RoomNumber)
         </dd>
+
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IdDepartmentNavigation)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IdDepartmentNavigation.Name)
-        </dd>      
+        </dd>
     </dl>
 </div>
 <div>
@@ -38,15 +40,12 @@
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Workplaces.FirstOrDefault().Number)
+            </th>           
+            <th>
+                @Html.DisplayNameFor(model => model.Workplaces.FirstOrDefault().IdComputerNavigation.Inv)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Workplaces.FirstOrDefault().IdRoom)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Workplaces.FirstOrDefault().IdComputerNavigation)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Workplaces.FirstOrDefault().IdMonitorNavigation)
+                @Html.DisplayNameFor(model => model.Workplaces.FirstOrDefault().IdMonitorNavigation.Inv)
             </th>
             <th></th>
         </tr>
@@ -63,13 +62,10 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.IdMonitorNavigation.Inv)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IdRoomNavigation.RoomNumber)
-                </td>
+                </td>               
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-controller="Installedsoftwares" asp-action="Details" asp-route-id="@item.IdComputerNavigation.Id">Details</a> |
                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
