Воюем с БД и реквестами

--- a/LogKyrcach/Views/Installedsoftwares/Index.cshtml
+++ b/LogKyrcach/Views/Installedsoftwares/Index.cshtml
@@ -61,7 +61,7 @@
                 @Html.DisplayFor(modelItem => item.WorkStatus)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IdRoom)
+                @Html.DisplayFor(modelItem => item.IdRoomNavigation.RoomNumber)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.IdEnginereNavigation.FirstName)
