--- a/LogKyrcach/Views/Requests/Create.cshtml
+++ b/LogKyrcach/Views/Requests/Create.cshtml
@@ -11,7 +11,13 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="IdRoom" class="control-label"></label>
+                <input asp-for="IdRoom" class="form-control" />
+                <span asp-validation-for="IdRoom" class="text-danger"></span>
+            </div>
 
             <div class="form-group">
                 <label asp-for="IdComputer" class="control-label"></label>
@@ -20,7 +26,7 @@
 
             <div class="form-group">
                 <label asp-for="InstalledsoftwareId" class="control-label"></label>
-                <select asp-for="InstalledsoftwareId" class="form-control" asp-items="ViewBag.InstalledsoftwareId"></select>
+                <select asp-for="InstalledsoftwareId" class ="form-control" asp-items="ViewBag.InstalledsoftwareId"></select>
             </div>
 
             <div class="form-group">
@@ -34,11 +40,12 @@
                 <input asp-for="ApplicationDate" class="form-control" />
                 <span asp-validation-for="ApplicationDate" class="text-danger"></span>
             </div>
-
+           
 
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
+
         </form>
     </div>
 </div>
