--- a/LogKyrcach/Views/Requests/Details.cshtml
+++ b/LogKyrcach/Views/Requests/Details.cshtml
@@ -11,6 +11,12 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IdRoom)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IdRoom)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdComputer)
         </dt>
         <dd class = "col-sm-10">
@@ -41,10 +47,10 @@
             @Html.DisplayFor(model => model.ApplicationClosingDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdEnginnerNavigation)
+            @Html.DisplayNameFor(model => model.IdEngineerNavigation)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdEnginnerNavigation.FirstName)
+            @Html.DisplayFor(model => model.IdEngineerNavigation.FirstName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Installedsoftware)
