--- a/LogKyrcach/Views/Requests/Delete.cshtml
+++ b/LogKyrcach/Views/Requests/Delete.cshtml
@@ -12,12 +12,6 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdRoom)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdRoom)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdComputer)
         </dt>
         <dd class = "col-sm-10">
@@ -52,6 +46,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.IdEngineerNavigation.FirstName)
+        </dd class>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IdRoomNavigation)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IdRoomNavigation.RoomNumber)
         </dd class>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Installedsoftware)
