--- a/LogKyrcach/Views/Requests/Index.cshtml
+++ b/LogKyrcach/Views/Requests/Index.cshtml
@@ -81,6 +81,7 @@
 
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Продробнее</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
