--- a/LogKyrcach/Areas/Identity/Pages/Account/Register.cshtml
+++ b/LogKyrcach/Areas/Identity/Pages/Account/Register.cshtml
@@ -46,7 +46,7 @@
                 }
                 else
                 {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                    <form id="external-account" asp-page="./ExternalEmail" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
                         <div>
                             <p>
                                 @foreach (var provider in Model.ExternalLogins)
@@ -65,3 +65,4 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
+    
