Revert "Добавлена работа с пользователями"
This reverts commit d8fa811ad29168ca18b8aa7653e53175694c2097.

--- a/LogKyrcach/Areas/Identity/Pages/Account/Register.cshtml
+++ b/LogKyrcach/Areas/Identity/Pages/Account/Register.cshtml
@@ -46,7 +46,7 @@
                 }
                 else
                 {
-                    <form id="external-account" asp-page="./ExternalEmail" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
                         <div>
                             <p>
                                 @foreach (var provider in Model.ExternalLogins)
@@ -65,4 +65,3 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
-    
