--- a/LogKyrcach/Views/Shared/_Layout.cshtml
+++ b/LogKyrcach/Views/Shared/_Layout.cshtml
@@ -29,13 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Requests">Заявки</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Workers">Работники</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Users">Пользователи</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Roles">Роли</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Workers">Пользователи</a>
                         </li>
                     </ul>
                 </div>
